Almost terminated to change Color_Node_Editor anguage from C++ to C#

--- a/RuntimeNodes.ImGUI.Sample/RuntimeNodes.ImGUI.Sample.csproj
+++ b/RuntimeNodes.ImGUI.Sample/RuntimeNodes.ImGUI.Sample.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -226,6 +227,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="example\color_node_editor.cs" />
+    <Compile Include="example\graph.cs" />
+    <Compile Include="example\hello.cs" />
+    <Compile Include="example\multi_editor.cs" />
+    <Compile Include="example\node_editor.cs" />
     <Compile Include="ImGuiController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -253,6 +259,10 @@
     <ProjectReference Include="..\.submodules\ImGui.NET\src\ImGui.NET\ImGui.NET.csproj">
       <Project>{C14ECFB0-9637-4A43-87FD-C889CFBC75B5}</Project>
       <Name>ImGui.NET</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\.submodules\ImGui.NET\src\ImNodes.NET\ImNodes.NET.csproj">
+      <Project>{EF2362C9-1140-4E1D-A92A-7780CB677D51}</Project>
+      <Name>ImNodes.NET</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
