--- a/RuntimeNodes.ImGUI/RuntimeNodes.ImGUI.csproj
+++ b/RuntimeNodes.ImGUI/RuntimeNodes.ImGUI.csproj
@@ -53,6 +53,9 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Utils\Colors.cs" />
+    <Compile Include="Utils\ListPool.cs" />
+    <Compile Include="Utils\Unsafe\Arrays.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
