--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".submodules/ImGui.NET"]
 	path = .submodules/ImGui.NET
 	url = https://github.com/mellinoe/ImGui.NET.git
+[submodule ".submodules/cimnodes"]
+	path = .submodules/cimnodes
+	url = https://github.com/cimgui/cimnodes.git
