--- a/ImNodes.NET/ImNodes.NET.csproj
+++ b/ImNodes.NET/ImNodes.NET.csproj
@@ -35,6 +35,9 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.4.0\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,15 +48,20 @@
   <ItemGroup>
     <Compile Include="ImMaths.cs" />
     <Compile Include="ImNodes.cs" />
+    <Compile Include="ImNodes.h.cs" />
     <Compile Include="ImNodes_Internal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Colors.cs" />
+    <Compile Include="Utils\ListExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\.submodules\ImGui.NET\src\ImGui.NET\ImGui.NET.csproj">
       <Project>{c14ecfb0-9637-4a43-87fd-c889cfbc75b5}</Project>
       <Name>ImGui.NET</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
