--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule ".submodules/ImGui.NET"]
-	path = .submodules/ImGui.NET
+	path = submodules/ImGui.NET
 	url = https://github.com/mellinoe/ImGui.NET.git
 [submodule ".submodules/cimnodes"]
-	path = .submodules/cimnodes
+	path = submodules/cimnodes
 	url = https://github.com/cimgui/cimnodes.git
 [submodule ".submodules/ImGui.NET-nativebuild"]
 	path = .submodules/ImGui.NET-nativebuild
